# bgp_platform

./: .Tpo  .clang-tidy  .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.debug  Dockerfile.model  LICENSE.txt  Makefile.am  README.md  SECURITY.md  configure.ac
.github/workflows/: format_check.yml
config/: .gitignore  Makefile.inc
config/examples/: config.json
m4/: ax_build_inotify_cpp.m4  ax_build_third_party.m4  ax_check_libpqxx_version.m4  ax_config_simple_logger.m4  ax_generate_sql.m4
scripts/: build_docker.sh  clean.sh  format.sh  launch_docker.sh  setup_db.sh
src/: Makefile.inc  Makefile.inc.am
src/bgp_platform/: Makefile.inc  Makefile.inc.am  main.cc
src/bgp_platform/common/: Makefile.inc.am  types.hpp
src/bgp_platform/database/: Makefile.inc  Makefile.inc.am  connector.cc  connector.hpp  database.cc  database.hpp
src/bgp_platform/database/models/: Makefile.inc  Makefile.inc.am  as_outage_event.hpp  prefix_outage_event.hpp
src/bgp_platform/database/sql/: .gitignore  Makefile.inc  Makefile.inc.am  count_tables.sql  create_as_outage_table.sql  create_country_outage_table.sql  create_prefix_outage_table.sql  insert_as_outage_event.sql  insert_prefix_outage_event.sql  update_prefix_outage_end.sql
src/bgp_platform/datacvt/: Makefile.inc  outage_data_generator.cc  outage_data_generator.hpp
src/bgp_platform/detector/: Makefile.inc  Makefile.inc.am  detector.cc  detector.hpp  file_watcher.cc  file_watcher.hpp  init_info.cc  init_info.hpp  outage_event.hpp  route_info.hpp  types.hpp
src/bgp_platform/routedata/: Makefile.inc.am  init_info.cc  init_info.hpp  route_info.hpp  routedata.cc  routedata.hpp
src/bgp_platform/utils/: Makefile.inc.am  clock.hpp  concurrent_queue.hpp  defs.hpp  files.hpp  ip.hpp  logger.hpp  strconv.hpp  types.hpp
src/detect_model/: Makefile.inc  logistic_regression.py
src/input_data/: Makefile.inc  __main__.py  outage_data.py
